@@ -4,14 +4,22 @@ import os.path
 import pytest
 
 
-@pytest.mark.slow
-def test_runs_git_to_clone_repository(root):
+@pytest.fixture(scope='function')
+def repos_path(root):
     repos_path = os.path.join(root.environment.workdir_base, 'upstream')
     cmd('mkdir {dir}; cd {dir}; git init;'
-        'touch foo; git add foo;'
-        'git commit --author="Jenkins <jenkins@example.com>" -am "foo"'.format(
+        'git config user.name Jenkins;'
+        'git config user.email jenkins@example.com;'
+        'touch foo; git add .;'
+        'git commit -am "foo"'.format(
             dir=repos_path))
-    root.component += batou.lib.git.Clone(repos_path, target='clone')
+    return repos_path
+
+
+@pytest.mark.slow
+def test_runs_git_to_clone_repository(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
     root.component.deploy()
     assert os.path.isfile(
         os.path.join(root.environment.workdir_base, 'mycomponent/clone/foo'))
@@ -19,13 +27,107 @@ def test_runs_git_to_clone_repository(root):
 
 
 @pytest.mark.slow
-def test_git_offers_bbb_api(root):
-    repos_path = os.path.join(root.environment.workdir_base, 'upstream')
-    cmd('mkdir {dir}; cd {dir}; git init;'
-        'touch foo; git add foo;'
-        'git commit --author="Jenkins <jenkins@example.com>" -am "foo"'.format(
-            dir=repos_path))
-    root.component += batou.lib.git.Clone('clone', source=repos_path)
+def test_setting_branch_updates_on_incoming_changes(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component.deploy()
+    cmd('cd {dir}; touch bar; git add .; git commit -m "commit"'.format(
+        dir=repos_path))
     root.component.deploy()
     assert os.path.isfile(
-        os.path.join(root.environment.workdir_base, 'mycomponent/clone/foo'))
+        os.path.join(root.environment.workdir_base, 'mycomponent/clone/bar'))
+
+
+@pytest.mark.slow
+def test_branch_does_switch_branch(root, repos_path):
+    cmd('cd {dir}; touch bar; git add .; git checkout -b bar;'
+        'git commit -m "commit branch"'.format(
+        dir=repos_path))
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='bar')
+    root.component.deploy()
+    stdout, stderr = cmd(
+        'cd {workdir}/clone; git rev-parse --abbrev-ref HEAD'.format(
+        workdir=root.workdir))
+    assert 'bar' == stdout.strip()
+
+
+@pytest.mark.slow
+def test_has_changes_counts_changes_to_tracked_files(root, repos_path):
+    clone = batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component += clone
+    root.component.deploy()
+    assert not clone.has_changes
+    cmd('touch {}/clone/bar'.format(root.workdir))
+    cmd('cd {}/clone; git add bar'.format(root.workdir))
+    assert clone.has_changes
+
+
+@pytest.mark.slow
+def test_has_changes_counts_untracked_files_as_changes(root, repos_path):
+    clone = batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component += clone
+    root.component.deploy()
+    assert not clone.has_changes
+    cmd('touch {}/clone/bar'.format(root.workdir))
+    assert clone.has_changes
+
+
+@pytest.mark.slow
+def test_clean_clone_updates_on_incoming_changes(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component.deploy()
+    cmd('cd {dir}; touch bar; git add .; git commit -m "commit"'.format(
+        dir=repos_path))
+    root.component.deploy()
+    assert os.path.isfile(root.component.map('clone/bar'))
+
+
+@pytest.mark.slow
+def test_changes_lost_on_update_with_incoming(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component.deploy()
+    cmd('cd {dir}; touch bar; git add .; git commit -m "commit"'.format(
+        dir=repos_path))
+    cmd('cd {dir}/clone; echo foobar >foo'.format(dir=root.workdir))
+    root.component.deploy()
+    assert os.path.exists(root.component.map('clone/bar'))
+    assert not open(root.component.map('clone/foo')).read()
+
+
+@pytest.mark.slow
+def test_changes_lost_on_update_without_incoming(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component.deploy()
+    cmd('cd {dir}/clone; echo foobar >foo'.format(dir=root.workdir))
+    root.component.deploy()
+    assert not open(root.component.map('clone/foo')).read()
+
+
+@pytest.mark.slow
+def test_untracked_files_are_removed_on_update(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master')
+    root.component.deploy()
+    cmd('cd {dir}/clone; mkdir bar; echo foobar >bar/baz'.format(
+        dir=root.workdir))
+    root.component.deploy()
+    assert not os.path.exists(root.component.map('clone/bar/baz'))
+
+
+@pytest.mark.slow
+def test_clean_clone_vcs_update_false_leaves_changes_intact(root, repos_path):
+    root.component += batou.lib.git.Clone(
+        repos_path, target='clone', branch='master', vcs_update=False)
+    root.component.deploy()
+    cmd('cd {dir}; echo foobar >foo; touch bar; git add .; '
+        'git commit -m "commit"'.format(dir=repos_path))
+    cmd('cd {dir}/clone; echo asdf >foo'.format(dir=root.workdir))
+    root.component.deploy()
+    assert 'asdf\n' == open(root.component.map('clone/foo')).read()
+    assert not os.path.exists(root.component.map('clone/bar'))
